Fix list of servers not appearing on mobile correctly

--- a/app/(main)/components/MainNavbar/components/ServerItem/styles.module.scss
+++ b/app/(main)/components/MainNavbar/components/ServerItem/styles.module.scss
@@ -2,12 +2,17 @@
 
 .server-button {
   height: 100%;
+  width: 100%;
   aspect-ratio: 1;
-  border-radius: calc(var(--br) * 2);
   border: none;
+  border-radius: calc(var(--br) * 3);
+  cursor: pointer;
   overflow: hidden;
+  transition: border-radius 150ms ease;
+  position: relative;
 
-  @include large-screen {
-    width: 100%;
+  img {
+    position: absolute;
+    inset: 0;
   }
 }
